--- a/app/src/main/res/layout/custom_earthquake_layout.xml
+++ b/app/src/main/res/layout/custom_earthquake_layout.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:textColor="@color/black"
+            android:textColor="@color/light_gray"
             android:textSize="17sp"
             android:textStyle="bold"
             tools:text="Tokyo" />
