--- a/app/src/main/res/layout/custom_earthquake_layout.xml
+++ b/app/src/main/res/layout/custom_earthquake_layout.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="2dp"
     android:orientation="horizontal"
-    android:padding="6dp">
+    android:background="@color/black"
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/magnitudeText"
@@ -32,7 +33,8 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:textColor="@color/dark_gray"
-            tools:text="Tokyo" />
+            tools:text="Tokyo"
+            tools:ignore="NestedWeights" />
 
         <TextView
             android:id="@+id/primaryLocation"
